name wrap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ html,body {
     -ms-border-radius: 50%;
     border-radius: 50%;
     display: block;
-    width: 75%;
+    width: 70%;
     height: auto;
     margin: 8% auto 25% auto;
 }
